# application-desktop-en-C

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  gestionDemande.txt  gestiondemande.glade  gestiondemande.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gestionDemande.c  gestionDemande.h  gestiondemande  interface.c  interface.c.bak  interface.h.bak  main.c
src/.deps/: callbacks.Po  gestionDemande.Po
